# apppolicy-scanner

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cli.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  rule_request.yml
.github/workflows/: ci.yml  publish_pypi.yml
apcop/: cli.py  report.py  rules.py
apcop/assets/: report.css
apcop/templates/: report.html
rules/: community.yaml
tests/: test_evaluate_ios_android.py  test_facts_smoke.py  test_pack_verify.py  test_pro_pack_verify.py  test_report_html.py
tests/fixtures/: android_facts.json  ios_facts.json
