[project]
name = "apppolicy-scanner"
version = "1.0.3"
description = "Local-first scanner that maps Apple/Google policy requirements to your iOS/Android manifests."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6,<7",
  "jinja2>=3.1,<4"
]
optional-dependencies = { pro = ["pynacl>=1.5,<2"] }

[project.scripts]
apppolicy = "apcop.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["apcop"]
include-package-data = true

[tool.setuptools.package-data]
apcop = ["templates/*.html", "assets/*.css"]

[project.scripts]
apppolicy = "apcop.cli:main"
