# --- Build system ---
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# --- PEP 621 project metadata ---
[project]
name = "apppolicy-scanner"
version = "1.0.3"
description = "AppPolicy scanner & evaluator for iOS/Android manifests with signed Pro rule packs."
readme = "README.md"
requires-python = ">=3.8"

# If you want to keep Jinja optional, remove it from 'dependencies' and keep it only in optional-dependencies.html
dependencies = [
  "pyyaml>=6,<7",
  # Uncomment if you want Jinja always available (easier for HTML templates in CI):
  # "jinja2>=3,<4",
]

# Optional extras
[project.optional-dependencies]
pro = ["pynacl>=1.5,<2"]
html = ["jinja2>=3,<4"]

# Single scripts table — DO NOT duplicate this block elsewhere
[project.scripts]
apppolicy = "apcop.cli:main"

# --- Setuptools configuration ---
[tool.setuptools]
packages = ["apcop"]
include-package-data = true

[tool.setuptools.package-data]
apcop = ["templates/*.html", "assets/*.css"]
